; ModuleID = '/home/carl/AnghaBench/linux/drivers/infiniband/ulp/srpt/extr_ib_srpt.c_srpt_ch_qp_rtr.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/infiniband/ulp/srpt/extr_ib_srpt.c_srpt_ch_qp_rtr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.srpt_rdma_ch = type { %struct.TYPE_2__, i32 }
%struct.TYPE_2__ = type { i32 }
%struct.ib_qp = type { i32 }
%struct.ib_qp_attr = type { i32, i32 }

@IB_QPS_RTR = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.srpt_rdma_ch*, %struct.ib_qp*)* @srpt_ch_qp_rtr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @srpt_ch_qp_rtr(%struct.srpt_rdma_ch* %0, %struct.ib_qp* %1) #0 {
  %3 = alloca %struct.srpt_rdma_ch*, align 8
  %4 = alloca %struct.ib_qp*, align 8
  %5 = alloca %struct.ib_qp_attr, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.srpt_rdma_ch* %0, %struct.srpt_rdma_ch** %3, align 8
  store %struct.ib_qp* %1, %struct.ib_qp** %4, align 8
  %8 = load %struct.srpt_rdma_ch*, %struct.srpt_rdma_ch** %3, align 8
  %9 = getelementptr inbounds %struct.srpt_rdma_ch, %struct.srpt_rdma_ch* %8, i32 0, i32 1
  %10 = load i32, i32* %9, align 4
  %11 = call i32 @WARN_ON_ONCE(i32 %10)
  %12 = load i32, i32* @IB_QPS_RTR, align 4
  %13 = getelementptr inbounds %struct.ib_qp_attr, %struct.ib_qp_attr* %5, i32 0, i32 1
  store i32 %12, i32* %13, align 4
  %14 = load %struct.srpt_rdma_ch*, %struct.srpt_rdma_ch** %3, align 8
  %15 = getelementptr inbounds %struct.srpt_rdma_ch, %struct.srpt_rdma_ch* %14, i32 0, i32 0
  %16 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = call i32 @ib_cm_init_qp_attr(i32 %17, %struct.ib_qp_attr* %5, i32* %6)
  store i32 %18, i32* %7, align 4
  %19 = load i32, i32* %7, align 4
  %20 = icmp ne i32 %19, 0
  br i1 %20, label %21, label %22

21:                                               ; preds = %2
  br label %27

22:                                               ; preds = %2
  %23 = getelementptr inbounds %struct.ib_qp_attr, %struct.ib_qp_attr* %5, i32 0, i32 0
  store i32 4, i32* %23, align 4
  %24 = load %struct.ib_qp*, %struct.ib_qp** %4, align 8
  %25 = load i32, i32* %6, align 4
  %26 = call i32 @ib_modify_qp(%struct.ib_qp* %24, %struct.ib_qp_attr* %5, i32 %25)
  store i32 %26, i32* %7, align 4
  br label %27

27:                                               ; preds = %22, %21
  %28 = load i32, i32* %7, align 4
  ret i32 %28
}

declare dso_local i32 @WARN_ON_ONCE(i32) #1

declare dso_local i32 @ib_cm_init_qp_attr(i32, %struct.ib_qp_attr*, i32*) #1

declare dso_local i32 @ib_modify_qp(%struct.ib_qp*, %struct.ib_qp_attr*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
